v1.0.0/modules/schema/pages/class/ServicePointOutageSummary.adoc
= `ServicePointOutageSummary`
:toclevels: 4


+++Summary counts of service points affected by an outage. These counts are sometimes referred to as total and critical customer count.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ServicePointOutageSummary`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* *`ServicePointOutageSummary`*


== Slots




[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<criticalCount,`criticalCount`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Number of critical service (delivery) points affected by an outage.+++

| <<totalCount,`totalCount`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Number of all service (delivery) points affected by an outage.+++
|===

'''


//[discrete]
[#criticalCount]
=== `criticalCount`
+++Number of critical service (delivery) points affected by an outage.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ServicePointOutageSummary.criticalCount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#totalCount]
=== `totalCount`
+++Number of all service (delivery) points affected by an outage.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ServicePointOutageSummary.totalCount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===


